# projeto-pet-axum

./: Cargo.toml  README.md  projeto_rust.db  test  teste
.github/workflows/: rust.yml
src/: main.rs
static/: styles.css
templates/: banho_tosa.html  consulta.html  index.html  login.html
